--- a/index.html
+++ b/index.html
@@ -20,21 +20,26 @@
     <main>
       <!-- Group #1 with 2 items -->
       <h1>Perk Up Your Afternoon</h1>
-      <img src="images/coffee-2-1.jpg" alt="" width="400" />
-      <h2>Coffee Basics</h2>
-      <p>
-        Coffee is a brewed drink prepared from roasted coffee beans, the seeds
-        of berries from certain Coffea species. It is darkly colored, bitter,
-        slightly acidic and has a stimulating effect in humans, primarily due to
-        its caffeine content.
-      </p>
-      <p>
-        Coffee plants are now cultivated in over 70 countries and is one of the
-        most popular drinks in the world. It can be prepared and presented in a
-        variety of ways (e.g., espresso, French press, caffè latte). It is
-        usually served hot, although iced coffee is a popular alternative.
-      </p>
-
+      <section>
+        <div class="horizontal">
+          <div>
+        <img src="images/coffee-2-1.jpg" alt="" width="400" />
+        <h2>Coffee Basics</h2>
+        <p>
+          Coffee is a brewed drink prepared from roasted coffee beans, the seeds
+          of berries from certain Coffea species. It is darkly colored, bitter,
+          slightly acidic and has a stimulating effect in humans, primarily due
+          to its caffeine content.
+        </p>
+        <p>
+          Coffee plants are now cultivated in over 70 countries and is one of
+          the most popular drinks in the world. It can be prepared and presented
+          in a variety of ways (e.g., espresso, French press, caffè latte). It
+          is usually served hot, although iced coffee is a popular alternative.
+        </p>
+        </div>
+        </div>
+      </section>
       <img src="images/coffee-2-2.jpg" alt="" width="400" />
 
       <!-- Group #2 with 3 items -->
